--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -1,9 +1,14 @@
 ﻿@model yakutsa.Models.Cart
 
+
+<div class="row">
+  <h1 class="text-center">@ViewData["Title"]</h1>
+</div>
+
 <div class="container">
-  <div class="row pt-5">
+  <div class="row">
     <div class="col-md-12">
-      <h1 b-wwctiolgr7="" class="text-center my-3">КОРЗИНА</h1>
+
       @if (Model?.Count != 0)
       {
         <div data-reflow-type="shopping-cart">
@@ -19,13 +24,13 @@
               </div>
               <div class="ref-cart-table">
 
-                @foreach (var product in Model?.CartProducts!)
+                @foreach (CartProduct? product in Model?.CartProducts!)
                 {
                   <div class="ref-product" data-id="@product?.Product?.id">
                     <div class="ref-product-col">
                       <div class="ref-product-wrapper flex-column flex-sm-row">
                         <a href="@Url.ActionLink("Product", "Home", new { id = product?.Product?.id })">
-                          <img class="ref-product-photo" src="@product?.Product?.imageUrl" alt="@product.Product.name" />
+                          <img class="ref-product-photo" src="@product?.Product?.images?.FirstOrDefault(i => i.Side == ImageSide.front && i.Size == ImageSize.s)?.Url" alt="@product?.Product?.name" />
                         </a>
                         <div class="ref-product-data">
                           <div class="ref-product-info text-center">
@@ -85,7 +90,7 @@
                 }
               </div>
               <div class="ref-footer">
-                <div class="ref-links d-flex-row d-md-flex-column">
+                <div class="ref-links d-flex flex-column flex-sm-row">
                   <a href="/RefundPolicy" target="_blank">Политика возврата</a>
                   <a href="/DeliveryRules" target="_blank">Условия доставки</a>
                 </div>
@@ -108,7 +113,7 @@
   </div>
 </div>
 
-<script>
+@*<script>
   (($)=>{
       let products = $('.ref-product');
 
@@ -116,4 +121,4 @@
       $('.ref-product-summ').closest('.ref-product');
       console.log(products);
   })(jQuery);
-</script>
+</script>*@
