--- a/Views/Home/DeliveryRules.cshtml
+++ b/Views/Home/DeliveryRules.cshtml
@@ -1,21 +1,34 @@
 ﻿<div class="row">
-  <div class="col-xl-12 mx-auto">
-    <p>
-      @*      <br>
-        — Бесплатная доставка осуществляется по территории города Курска при заказе на сумму от 3000 руб.;
+  <h1 class="text-center">@ViewData["Title"]</h1>
+</div>
+<div class="container px-0">
+  <div class="row text-content">
+    <div class="col-xl-12 mx-auto">
+      <p>
+        После оплаты товара мы начинаем его производство. Срок производства зависит от наличия комплектующих и занимает от 5 до 30 дней, по завершению производства заказ передается в службы доставки.
         <br>
-        — Если сумма заказа манее 3000 руб. стоимость доставки по городу Курску составляет 300 руб.;
         <br>
-        — C 26-го декабря по 30-е декабря стоимость доставки состовляет 400 руб. независимо от суммы заказа;
+        Доставка по Москве (в пределах МКАД) <br>
+        •Почтой России - бесплатно <br>
+        •Курьером CDEK - бесплатно <br>
+        •Яндекс курьер - по запросу
         <br>
-        — 31-го декабря доставка осуществляется по предварительной договоренности;
         <br>
-        — Стоимость доставки за пределы города составляет 15 рублей за 1 километр от черты города;
+        Доставка по Москве (за пределами МКАД) <br>
+        •Почтой России - бесплатно <br>
+        @*  •Курьером CDEK - 250 руб. <br>*@
+        •Яндекс курьер - по запросу
         <br>
-        — Доставка производится в день заказа, если заказ оформлен до 17-00;
         <br>
-        — Заказы оформленные после 17-00 Вы сможете получить на следующий день.
-      *@
-    </p>
+        Доставка в Регионы <br>
+        •Почтой России - бесплатно <br>
+        •Курьером CDEK - по запросу
+        <br>
+      @*  Доставка в другие страны
+        •Почтой России EMS (30-60 дней) - как Рус подключит модуль расчёта стоимости
+        •DHL (5-10 дней) - как Рус подключит модуль рассчета стоимости*@
+      </p>
+    </div>
   </div>
+
 </div>
