--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Product>?
 
 <div class="container-fluid p-0">
-  <div class="row mt-0">
+  <div class="row mt-0 pt-0">
     <div class="col-sm-12 p-0">
       @{
         await Html.RenderPartialAsync("/Views/Partials/CarouselPartial.cshtml");
@@ -9,17 +9,18 @@
     </div>
   </div>
   <section id="catalog">
-    <div class="row row-cols-2 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 row-cols-xl-5 g-1 g-sm-2 mt-3 px-1 px-md-3">
+
+    <div class="row row-cols-2 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 row-cols-xl-5 g-1 g-sm-2 mt-3 px-1 px-md-3 justify-content-center">
       @foreach (Product p in Model!)
       {
         <div class="col">
-          <a href="@Url.ActionLink("Product","Home",new {id = p.id})" class="">
+          <a href="@Url.ActionLink("Product","Home",new {id = p.id})" class="nohover">
             <div class="card h-100 pb-0" style="justify-content: center;align-items: center;overflow: hidden;">
-              <img src="@p.imageUrl" class="card-img" alt="@p.name">
+              <img src="@p.images?.FirstOrDefault(i => i.Side == ImageSide.front && i.Size == ImageSize.m)?.Url" class="card-img" alt="@p.name" width="360">
               <div class="card-body">
-                <h5 class="card-title text-center">@p.name</h5>
+                <h5 class="card-title text-center nohover">@p.name</h5>
                 <p class="card-text fa-sm text-end">
-                  @p.maxPrice <i class="fa fa-rub opacity-100" style="color:white;"></i>
+                  @p.maxPrice <i class="fa fa-rub nohover"></i>
                 </p>
               </div>
             </div>
@@ -27,6 +28,56 @@
         </div>
       }
     </div>
+    @*
+      @if (!Startup.Environment.IsDevelopment())
+      {
+      <div class="row row-cols-2 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 row-cols-xl-5 g-1 g-sm-2 mt-3 px-1 px-md-3">
+      @foreach (Product p in Model!)
+      {
+      <div class="col">
+      <a href="@Url.ActionLink("Product","Home",new {id = p.id})" class="">
+      <div class="card h-100 pb-0" style="justify-content: center;align-items: center;overflow: hidden;">
+      <img src="@p.imageUrl" class="card-img" alt="@p.name">
+      <div class="card-body">
+      <h5 class="card-title text-center">@p.name</h5>
+      <p class="card-text fa-sm text-end">
+      @p.maxPrice <i class="fa fa-rub opacity-100" style="color:white;"></i>
+      </p>
+      </div>
+      </div>
+      </a>
+      </div>
+      }
+      </div>
+      }
+      else
+      {
+      <div class="row row-cols-1">
+      @foreach (Product p in Model!)
+      {
+      <div class="col mx-auto">
+      <div class="card" style="max-width: 540px;overflow: hidden;align-items: center;justify-content: center;">
+      <div class="row g-0">
+      <div class="col-md-4">
+      <img src="@p.imageUrl" class="img-fluid rounded-start" alt="@p.name">
+      </div>
+      <div class="col-md-8">
+      <div class="card-body">
+      <h5 class="card-title">@p.name</h5>
+      <p class="card-text">@p.description</p>
+      <p class="card-text">@p.maxPrice</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+      </div>
+      </div>
+      </div>
+      </div>
+      }
+      </div>
+      }
+    *@
+
+
   </section>
 </div>
 
@@ -36,17 +87,3 @@
   </div>
 </div>
 
-@*<div class="card mb-3" style="max-width: 540px;">
-  <div class="row g-0">
-  <div class="col-md-4">
-  <img src="..." class="img-fluid rounded-start" alt="...">
-  </div>
-  <div class="col-md-8">
-  <div class="card-body">
-  <h5 class="card-title">Card title</h5>
-  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-  </div>
-  </div>
-  </div>
-  </div>*@
