--- a/Views/Home/RefundPolicy.cshtml
+++ b/Views/Home/RefundPolicy.cshtml
@@ -1,55 +1,34 @@
-﻿<div class="row pt-5">
+﻿<div class="row">
   <div class="col-md-12">
     <h1 class="text-center">@ViewData["Title"]</h1>
-    <hr />
-    <br />
   </div>
 </div>
-<div class="row">
-  <div class="col-xl-12 mx-auto">
-    <h4 class="text-center">Возврат и обмен товара надлежащего качества</h4>
-    @*    <p>
-      Вы вправе отказаться от товара в любое время ДО его передачи Перевозчику, а после передачи — в соответствии с
-      <a href="http://www.consultant.ru/document/cons_doc_LAW_305/" target="_blank">законом о защите прав потребителей</a>, а также
-      <a href="http://www.consultant.ru/document/cons_doc_LAW_71418/cec011b240d930e3ba04a9e26bc38d7c4c5f2def/" target="_blank">о дистанционной торговле</a>.
-      <br>
-      <br>Возврат товара
-      <b>надлежащего качества</b> возможен в случае, если сохранены его товарный вид и потребительские свойства:
-      <br>
-      — Товар не был в употреблении, нет следов инициации изделия;
-      <br>
-      — Защитная наклейка на фитиле не повреждена;
-      <br>
-      — Упаковка сухая и не имеет дефектов;
-      <br>
-      — Товар не имеет запаха сырости;
-      <br>
-      — Товар не имеет следов попадания прямых солнечных лучей (выцветание упаковки).
-      </p>
+<div class="container px-0">
+  <div class="row text-content">
+    <div class="col-xl-12 mx-auto">
+      <h4 class="text-center">ВОЗВРАТ</h4>
       <p>
-      <span style="color: red">
-      Срок для заявления о возврате:
-      <b>не позднее 7 календарных дней</b> после передачи товара (для этого необходимо оформить претензию, запросите бланк претензии по телефону <b>+7 (4712) 32-70-35</b>).
-      </span>
-      </p>*@
-  </div>
-
-  <div class="col-xl-12 mx-auto">
-    <hr />
-    <br />
-    <h4 class="text-center">Возврат и обмен товара не надлежащего качества</h4>
-    @* <p>
-      Пиротехнические изделия НЕ НАДЛЕЖАЩЕГО КАЧЕСТВА заменим на аналогичные в соответствии с законом о "Защите прав потребителей".
+        Вы можете отказаться от заказанного товара в любое время до его получения, в момент передачи товара курьером, а также после получения — в течение 7 календарных дней.
+        <br />
+        Возврат товара надлежащего качества возможен в случае, если сохранены его товарный вид и потребительские свойства. При возврате товара надлежащего качества мы вернем его стоимость не позднее чем через 10 дней с момента получения товара и вашего письменного заявления, однако в пределах указанного срока мы вправе провести экспертизу товара с целью определения его качества и сохранности потребительских свойств. Сроки зачисления денежных средств на расчетный счет получателя зависят от внутреннего регламента банка-получателя.
+        <br />
+        Для того чтобы вернуть товар необходимо:
+        <br />
+        Связаться с нами по телефону +7 (999) 003-10-00 или электронной почте info@yakutsa.ru, заполнить заявление на возврат. Приложить копию паспорта, чек и отправить заказ и документы нам по адресу, который сообщит менеджер магазина. Доставка оплачивается за счет клиента.
+        <br />
+        Для возврата товара также необходим документ, удостоверяющий личность.
       </p>
-      <br />
-      </div>
-      <div class="col-xl-12 mx-auto">
+    </div>
+
+    <div class="col-xl-12 mx-auto">
       <hr />
       <br />
-      <h4>Возврат оплаты при дистанционной торговле (при оплате картой на сайте)</h4>
-      <br />
-      <p class="">Для возврата <b style="color:red">в день оплаты ДО момента отправки заказа</b>  позвоните по телефону <b>+7 (4712) 32-70-35</b>, достаточно назвать ФИО, номер заказа или телефона.</p>
-      <p class="">Возврат после передачи товара происходит в течение <b>7 дней</b>, для этого необходимо:<br>— оформить претензию;<br>— указать ФИО, номер заказа, сумму;<br>— чтобы получить оплату назад, карта или счет, с которого была произведена оплата, НЕ должны быть заблокированы.<br><span style="color: red">ВАЖНО: возврату подлежит сумма, уплаченная Покупателем в соответствии с Заказом, за исключением расходов Продавца на доставку возвращенного товара от Покупателя до склада Продавца, не позднее чем через 10 дней с даты предъявления Покупателем соответствующего требования.</span></p>*@
+      <h4 class="text-center">ОБМЕН</h4>
+      <p>
+        Для осуществления обмена необходимо предварительно связаться с нами по номеру +7 (999) 003-10-00, чтобы назначить встречу и убедиться в наличии необходимого размера. Для заказов оформленных из других городов вам нужно заказать на нашем сайте новый товар и оформить возврат не подошедшего.
+      </p>
+    </div>
   </div>
 </div>
+
 
