--- a/Views/Partials/CarouselPartial.cshtml
+++ b/Views/Partials/CarouselPartial.cshtml
@@ -6,7 +6,7 @@
       </video>
     </div>
     <div class="carousel-item">
-      <video height="880" preload="auto" muted playsinline class="d-block w-100">
+      <video height="880" preload="metadata" muted playsinline class="d-block w-100">
         <source src="/videos/IMG_1882_s.mp4" type='video/mp4' />
       </video>
     </div>
