--- a/Views/Home/Category.cshtml
+++ b/Views/Home/Category.cshtml
@@ -1,30 +1,31 @@
 ﻿@model List<Product>
 
-<div class="container-fluid px-1 px-md-3">
-  <div class="row pt-5">
+<div class="container-fluid px-0">
+  <div class="row">
     <div class="col-md-12">
       <h1 class="text-center">@ViewBag.Category?.name</h1>
     </div>
   </div>
-  <div class="row pb-3">
-    <div class="col-sm-4 mr-auto">
+  <div class="row my-2">
+
+    <div class="mt-2 mr-auto icon-link">
       <a href="@Url.ActionLink("Index", "Home")">
-        <i class="fas fa-arrow-left md ms-5" style="opacity:1"></i>
+        <i class="fas fa-arrow-left md ms-0 ms-md-5 nohover" style="opacity:1"></i>
         <span class="" style="display: inline-block;">назад</span>
       </a>
     </div>
   </div>
-  <div class="row row-cols-2 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 row-cols-xl-5 g-1 g-sm-2 mt-3">
+  <div class="row row-cols-2 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 row-cols-xl-5 g-1 g-sm-2 justify-content-center">
     @foreach (Product p in Model!)
     {
       <div class="col">
-        <a href="@Url.ActionLink("Product","Home",new {id = p.id})" class="h-100 w-100">
+        <a href="@Url.ActionLink("Product","Home",new {id = p.id})" class="h-100 w-100 nohover">
           <div class="card h-100 pb-0 justify-content-center align-items-center" style="overflow: hidden;">
-            <img src="@p.imageUrl" class="card-img" alt="@p.name">
+            <img src="@p.images?.FirstOrDefault(i => i.Side == ImageSide.front && i.Size == ImageSize.m)?.Url" style="object-fit: contain;" height="580" width="227" class="card-img" alt="@p.name">
             <div class="card-body">
               <h5 class="card-title text-center">@p.name</h5>
               <p class="card-text fa-sm text-end">
-                @p.maxPrice <i class="fa fa-rub opacity-100" style="color:white;"></i>
+                @p.maxPrice <i class="fa fa-rub nohover"></i>
               </p>
             </div>
           </div>
