--- a/Views/Home/PaymentRules.cshtml
+++ b/Views/Home/PaymentRules.cshtml
@@ -1,31 +1,33 @@
-﻿<br />
-<div class="row">
-  <div class="col-xl-12 mx-auto">
-    <h4>Наличный расчет</h4>
-    <br />
-  </div>
-
-  <div class="col-xl-12 mx-auto">
-    <hr />
-    <br />
-    <h4>Безналичный расчет</h4>
-    <p>
-      Работаем с организациями, подготавливаем полный комплект документов.
-    </p>
-    <br />
-  </div>
-  <div class="col-xl-12 mx-auto">
-    <hr />
-    <br />
-    <h4>БАНКОВСКОЙ КАРТОЙ</h4>
-    <p class="m-0">
-      Оплата происходит через ПАО СБЕРБАНК с использованием Банковских карт следующих платежных систем: МИР, VISA International, Mastercard Worldwide,JCB.
-    </p>
-    <img src="~/img/content-card.png" height="120"/>
-    <p>
-      Для оплаты (ввода реквизитов Вашей карты) Вы будете перенаправлены на платёжный шлюз ПАО СБЕРБАНК. Соединение с платёжным шлюзом и передача информации осуществляется в защищённом режиме с использованием протокола шифрования SSL. В случае если Ваш банк поддерживает технологию безопасного проведения интернет-платежей Verified By Visa, MasterCard SecureCode, MIR Accept, J-Secure для проведения платежа также может потребоваться ввод специального пароля.
-    </p>
-    <p>Настоящий сайт поддерживает 256-битное шифрование. Конфиденциальность сообщаемой персональной информации обеспечивается ПАО СБЕРБАНК. Введённая информация не будет предоставлена третьим лицам за исключением случаев, предусмотренных законодательством РФ. Проведение платежей по банковским картам осуществляется в строгом соответствии с требованиями платёжных систем МИР, Visa Int., MasterCard Europe Sprl, JCB.</p>
+﻿<div class="row">
+  <h1 class="text-center">@ViewData["Title"]</h1>
+</div>
+<div class="container px-0">
+  <div class="row text-content">
+  @*  <div class="col-xl-12 mx-auto">
+      <h4>Наличный расчет</h4>
+      <br />
+    </div>
+    <div class="col-xl-12 mx-auto">
+      <hr />
+      <br />
+      <h4>Безналичный расчет</h4>
+      <p>
+        Работаем с организациями, подготавливаем полный комплект документов.
+      </p>
+      <br />
+    </div>*@
+    <div class="col-xl-12 mx-auto">
+      <h4>БАНКОВСКОЙ КАРТОЙ</h4>
+      <p class="m-0">
+        Оплата происходит через ООО «КЛАУДПЭЙМЕНТС» с использованием Банковских карт следующих платежных систем: МИР, VISA International, Mastercard Worldwide,JCB.
+      </p>
+      <img src="~/img/content-card.png" width="125" height="420" style="width: 100%;max-height: 140px;margin: auto;object-fit: contain;
+"/>
+      <p>
+        Для оплаты (ввода реквизитов Вашей карты) Вы будете перенаправлены на платёжный шлюз. Соединение с платёжным шлюзом и передача информации осуществляется в защищённом режиме с использованием протокола шифрования SSL. В случае если Ваш банк поддерживает технологию безопасного проведения интернет-платежей Verified By Visa, MasterCard SecureCode, MIR Accept, J-Secure для проведения платежа также может потребоваться ввод специального пароля.
+      </p>
+      <p>Настоящий сайт поддерживает 256-битное шифрование. Конфиденциальность сообщаемой персональной информации обеспечивается ПАО СБЕРБАНК. Введённая информация не будет предоставлена третьим лицам за исключением случаев, предусмотренных законодательством РФ. Проведение платежей по банковским картам осуществляется в строгом соответствии с требованиями платёжных систем МИР, Visa Int., MasterCard Europe Sprl, JCB.</p>
+    </div>
   </div>
 </div>
 
