--- a/Views/Internal/Layout.cshtml
+++ b/Views/Internal/Layout.cshtml
@@ -6,30 +6,28 @@
   @* <meta http-equiv="x-ua-compatible" content="IE=edge">*@
   <meta charset="utf-8" />
   <!-- Chrome, Firefox OS and Opera -->
-  <meta name="theme-color" content="#001132">
+  <meta name="theme-color" content="black">
   <!-- Windows Phone -->
-  <meta name="msapplication-navbutton-color" content="#001132">
+  <meta name="msapplication-navbutton-color" content="black">
   <!-- iOS Safari -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
-  <meta property="og:url" content="https://yakudsa.it-wiki.site/">
-  <meta property="og:image" content="https://yakudsa.it-wiki.site/img/og_logo.png">
-
+  <meta name="theme-color" content="#272727" />
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=5' />
+  <meta property="og:type" content='website'>
+  <meta property="og:title" content='@ViewData["Title"]'>
+  <meta property="og:url" content='https://@this.Context.Request.Host'>
+  <meta property="og:image" content='@ViewData["Image"]'>
+  <meta name="yandex-verification" content="ffb2a7e35abc7b93" />
   <meta property="og:description" content="@ViewData["Description"]">
   <meta property="description" content="@ViewData["Description"]">
-  <title>YAKUTSA - @ViewData["Title"]</title>
-  @* <link rel="preload" href="~/fonts/Batman.ttf" as="font" onload="this.rel='stylesheet'">*@
-  <link async rel="preload" href="~/lib/bootstrap/dist/css/bootstrap.css" as="style" onload="this.rel='stylesheet'">
-  <link async rel="preload" href="~/lib/fancybox/jquery.fancybox.css" as="style" onload="this.rel='stylesheet'">
-  <link async rel="preload" href="~/lib/toolkit.min.css" as="style" onload="this.rel='stylesheet'">
-  <link async rel="preload" href="~/css/site.css" as="style" onload="this.rel='stylesheet'">
-
+  <title>YAKUTSA-@ViewData["Title"]</title>
+  <link rel="stylesheet" href="~/css/site.css" asp-append-version="true">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="~/lib/fancybox/jquery.fancybox.css">
-  <link rel="stylesheet" href="~/css/suggestion.css">
-  <link rel="stylesheet" href="~/lib/toolkit.min.css" />
-  <link rel="stylesheet" href="~/css/site.css">
+  <link rel="stylesheet" href="~/css/suggestion.css" />
+  <link rel="stylesheet" href="~/lib/toolkit.min.css" asp-append-version="true" />
 
   <style>
     body.loading main, body.loading aside, header.loading {
@@ -38,7 +36,7 @@
     }
   </style>
 
-  <script src="~/lib/jquery/dist/jquery.js" type="text/javascript"></script>
+
   <script src="~/lib/fontawesome/49a24c4a0e.js"></script>
 </head>
 <body class="busy">
@@ -73,72 +71,63 @@
     <nav class="top-bar">
       <div>
         <a href="/" class="d-none d-sm-block">
-          <img src="~/img/logo.png" />
+          <img src="~/img/logo.png" alt="logo" aria-hidden="true" width="293" height="45" style="object-fit:contain" />
         </a>
         <a href="/" class="d-sm-none">
-          <img src="~/img/sm_logo.png" />
+          <img src="~/img/sm_logo.png" alt="logo" aria-hidden="true" width="46" height="41" style="object-fit:contain" />
         </a>
       </div>
       <div class="inline-icons">
         @{
           await Html.RenderPartialAsync("~/Views/Partials/LoginPartial.cshtml");
         }
-        <div class="position-relative text-center mt-3 mx-2">
-          <i class="fas fa-bars mx-auto d-block my-4 fa-2x" data-bs-toggle="modal" href="#menu_modal" role="button"></i>
-          <a href="@Url.ActionLink("Cart", "Home")">
-            <i class="fas fa-shopping-cart mx-auto d-block fa-2x" count="@ViewData["count"]" role="button"></i>
+        <div class="position-relative text-center mt-1 mx-2">
+          <i class="fas fa-bars mx-auto d-block my-2 fa-2x nohover" data-bs-toggle="modal" href="#menu_modal" role="button"></i>
+          <a class="nohover" href="@Url.ActionLink("Cart", "Home")" aria-hidden="true">
+            <i class="fas fa-shopping-cart mx-auto d-block fa-2x nohover" count="@ViewData["count"]" role="button"></i>
           </a>
         </div>
       </div>
     </nav>
 
-    <div class="modal fade" id="menu_modal" aria-hidden="true" aria-labelledby="menu_modal_Toggle_Label" tabindex="-1">
-      <div class="modal-dialog modal-fullscreen">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="menu_modal_Toggle_Label">Меню</h5>
-            <i class="fas fa-times fa-2x" aria-hidden="true" data-bs-dismiss="modal"></i>
-          </div>
-          <div class="modal-body">
-            <div class="container h-100">
-              <div class="row h-75 align-items-center">
-                <div class="col-12 col-sm-6">
-                  <ul style="text-align: left;list-style: none;">
-                    <li class="my-1">
-                      <a class="btn btn-main" style="font-size: 40px;color: #8b8b8b;" href="/#catalog">каталог</a>
-                    </li>
-                    <li class="my-1">
-                      <a class="btn btn-main" style="font-size: 40px;color: #8b8b8b;" href="/">о нас</a>
-                    </li>
-                    <li class="my-1">
-                      <a class="btn btn-main" style="font-size: 40px;color: #8b8b8b;" href="/DeliveryRules">доставка</a>
-                    </li>
-                    <li class="my-1">
-                      <a class="btn btn-main" style="font-size: 40px;color: #8b8b8b;" href="/PaymentRules">оплата</a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-12 col-sm-6">
-                </div>
-              </div>
-            </div>
+    @{
+      await Html.RenderPartialAsync("~/Views/Partials/MainMenuPartial.cshtml");
+    }
 
-          </div>
-          @*   <div class="modal-footer">
-            footer...
-            </div>*@
-        </div>
-      </div>
-    </div>
+
   </header>
   <main role="main">
-    <div class="container-fluid pb-4 px-0">
+    <div class="container-fluid">
       @RenderBody()
     </div>
   </main>
 
   <footer class="footer-dark">
-    <div class="container-fluid">
+    <div class="container">
+      <div class="row" style="border-top-style: none;">
+        <div class="col-sm-7 col-md-4 item">
+          <h4>Документы</h4>
+          <ul>
+            <li><a href="@Url.ActionLink("PaymentRules","Home")">Способы оплаты</a></li>
+            <li><a href="@Url.ActionLink("DeliveryRules","Home")">Условия доставки</a></li>
+            <li><a href="@Url.ActionLink("RefundPolicy","Home")">Политика возврата</a></li>
+            <li><a href="@Url.ActionLink("Privacy","Home")">Положение о конфиденциальности</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-1 col-md-4 item">
+          @* <ul class="d-inline-flex w-100 justify-content-center">
+            <li class="mx-2 nohover"><i class="fa fa-cc-visa fa-3x nohover"></i></li>
+            <li class="mx-2 nohover"><i class="fa fa-cc-mastercard fa-3x nohover"></i></li>
+            </ul>*@
+        </div>
+        <div class="col social">
+          @*   <a href="#"><i class="fa fa-facebook"></i></a>*@
+          <a target="_blank" href="https://vk.com/yakutsa_brand"><i class="fa fa-vk fa-3x"></i></a>
+          <a target="_blank" href="https://t.me/YakutsaBot"><i class="fa fa-telegram fa-3x"></i></a>
+          @*   <a href="#"><i class="fa fa-odnoklassniki"></i></a>*@
+        </div>
+      </div>
+      <p class="copyright">ООО &quot;ЯКУТСА&quot; @DateTime.Now.Year <i class="fa fa-copyright nohover"></i></p>
     </div>
   </footer>
 
@@ -158,13 +147,15 @@
     }*@
 
   <div class="d-block toTop-toggler"><i class="fa fa-arrow-up opacity-100" style="color:#0c7a01;z-index: 50;"></i></div>
+  <script src="~/lib/jquery/dist/jquery.js" type="text/javascript"></script>
 
-  <script src="~/lib/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
   <script src="~/lib/mobile-detect.min.js" type="text/javascript"></script>
+  <script src="/lib/popper/popper.min.js" type="text/javascript"></script>
   <script src="/lib/fancybox/jquery.fancybox.js" type="text/javascript"></script>
   <script src="~/js/labelholder.js" type="text/javascript"></script>
   <script src="~/js/suggestion.js" type="text/javascript"></script>
-  <script src="~/js/site.js" type="text/javascript"></script>
+  <script src="~/lib/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
+  <script src="~/js/site.js" type="text/javascript" asp-append-version="true"></script>
   <script type="text/javascript" language="javascript">
     document.addEventListener("DOMContentLoaded", () => {
         document.querySelector('header').classList.remove('loading');
